# lurk-rs

./: Cargo.toml  flake.nix  rust-toolchain  rust-toolchain.toml
benches/: eval.rs
fcomm/src/: lib.rs
fcomm/tests/: proof_tests.rs
ldon/: Cargo.toml
ldon/src/: cid.rs  expr.rs  lib.rs  macros.rs  op.rs  package.rs  ptr.rs  store.rs  sym.rs  syntax.rs
ldon/src/parser/: string.rs  syntax.rs
lurk_core/: Cargo.toml
lurk_core/src/: cons.rs  error.rs  eval.rs  expr.rs  hash_witness.rs  lib.rs  num.rs  ptr.rs  store.rs  uint.rs  writer.rs
lurk_core/src/eval/: cons.rs  control.rs  evaluator.rs  frame.rs  hash_witness.rs  io.rs  status.rs  witness.rs
lurk_ff/src/: field.rs  lib.rs  tag.rs
lurk_lang/: Cargo.toml
src/: error.rs  eval.rs  field.rs  hash_witness.rs  lib.rs  num.rs  package.rs  parser.rs  repl.rs  scalar_store.rs  store.rs  sym.rs  uint.rs  writer.rs
src/circuit/: circuit_frame.rs
src/circuit/gadgets/: case.rs  constraints.rs  data.rs  hashes.rs  macros.rs  pointer.rs
src/proof/: groth16.rs  nova.rs
