[package]
name = "lurk_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = "0.14.0"
once_cell = "1.9.0"
ahash = "0.7.6"
indexmap = { version = "1.8.0", features = ["rayon"] }
dashmap = "5.0.0"
rayon = "1.6.1"
bellperson = "0.24"
nova = { package = "nova-snark", version = "0.9.0", default-features = false }

lurk_ff = { path = "../lurk_ff", optional = true }
ldon = { path = "../ldon", optional = true }
rand = { version = "0.8", optional = true }
quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.0.0", optional = true }

[features]
default = ["dep:lurk_ff", "dep:ldon"]
test-utils = ["lurk_ff?/test-utils", "ldon?/test-utils", "dep:rand", "dep:quickcheck", "dep:quickcheck_macros"] 

[dev-dependencies]
lurk_core = { path = ".", features = ["test-utils"] } # enable "test-utils" feature
ldon = { path = "../ldon", features = ["test-utils"] } # enable "test-utils" feature
lurk_ff = { path = "../lurk_ff", features = ["test-utils"] }
rand = { version = "0.8" }
quickcheck = { version = "1.0.3" }
quickcheck_macros = { version = "1.0.0" }
